<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">时间管理</string>
    <string name="list">列表</string>
    <string name="search">搜索</string>
    <string name="star">标星</string>
    <string name="home">主页</string>
    <string name="setting">设置</string>
    <string name="add_category">增加</string>
    <string name="create_diary">记录生活点滴</string>
    <string name="create_minder">新建个人事件提醒</string>
    <string name="del_category">删除</string>
    <string name="edit_category">编辑</string>
    <string name="save">保存</string>
    <string name="add_tag">增加标签</string>
    <string name="default_text">暂无文字</string>
    <string name="sample_text">如果你浪费了自己的年龄，那是挺可悲的。因为你的青春只能持续一点儿时间——很短的一点儿时间</string>
    <string name="add_tag_info">请输入标签名字</string>
    <string name="add_category_hint">请输入要增加的分类</string>
    <string name="add_tag_hint">请输入要增加的标签</string>
    <string name="empty_warning">分类标签不能为空</string>
    <string name="empty_tag_warning">标签不能为空</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="default_date">27</string>
    <string name="default_today">今天</string>
    <string name="default_month">6月</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="save_diary_item">保存日记条目</string>
    <string name="new_diary_item">新建日记条目</string>
    <string name="diary_item_list">条目列表</string>
    <string name="diary_item_notice">添加备注</string>
    <string name="diary_note">备注信息</string>
    <string name="loading">正在加载...</string>
    <string name="choose_tag">选择标签</string>
    <string name="choose_weather">选择天气</string>
    <string name="choose_address">地址</string>
    <string name="category">分类</string>
    <string name="tag">标签</string>
    <string name="output">导出你的日记</string>
    <string name="output_event">导出你的事件</string>
    <string name="upload_evernote">上传到印象笔记</string>
    <string name="set_password">设置密码</string>
    <string name="create_time">创建时间</string>
    <string name="create_adress">创建地点</string>
    <string name="create_weather">当时天气</string>
    <string name="menu_delete">删除日记</string>
    <string name="menu_edit">编辑日记</string>
    <string name="menu_new">新建日记条目</string>
    <string name="menu_save">保存日记</string>
    <string name="menu_item_save">保存日记条目</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_sign">个信签名</string>
    <string name="minder_title">请输入事件标题</string>
    <string name="minder_content">请输入事件内容</string>
    <string name="menu_edit_minder">编辑事件</string>
    <string name="menu_delete_minder">删除事件</string>
    <string name="menu_save_category">保存分类</string>
    <string name="menu_delete_category">删除分类</string>
    <string name="menu_edit_category">编辑分类</string>
    <string name="menu_save_tag">保存标签</string>
    <string name="set_alarm_time">设置闹钟时间</string>
    <string name="mind_alarm_time">事件提醒时间</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">详情</string>

</resources>
