<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:orientation="horizontal"
              android:padding="@dimen/padding_micro"
              android:layout_width="match_parent"
              android:layout_gravity="center_vertical"
              android:layout_height="match_parent">

    <ImageView
            android:id="@+id/iv_tag_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/others"
            android:paddingLeft="@dimen/padding_micro"
            android:scaleType="fitXY"/>

    <EditText
            android:id="@+id/et_tag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/padding_micro"
            android:layout_marginRight="@dimen/padding_micro"
            android:enabled="false"
            android:text="@string/default_text"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/bt_edit_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/edit"
            bootstrap:bb_type="success"
            bootstrap:bb_size="small"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/bt_delete_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/delete"
            bootstrap:bb_type="danger"
            bootstrap:bb_size="small"/>
</LinearLayout>