<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_gravity="center_vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/ll_main_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_micro"
                android:paddingRight="@dimen/padding_micro"
                android:layout_gravity="left"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_micro"
                    android:text="@string/category"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
            </TextView>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_micro"
                    android:text="@string/tag"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/tag_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/padding_micro"
                android:paddingRight="@dimen/padding_micro"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/padding_micro"
                    android:text="@string/begin_time"/>
            <TextView
                    android:id="@+id/tv_begin_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_micro"
                    android:layout_weight="1"
                    android:text="@string/end_time"/>
            <TextView
                    android:id="@+id/tv_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:editable="false"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_micro"
                android:paddingRight="@dimen/padding_micro"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_micro"
                    android:layout_marginBottom="@dimen/padding_small"
                    android:text="@string/diary_note"/>

            <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="2">
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_left_part"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@android:color/darker_gray">
        <TextView
                android:id="@+id/item_right_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/edit"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/blur_bg"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_right_part"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@android:color/holo_red_light">
        <TextView
                android:id="@+id/item_right_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/del_icon_normal"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/blur_bg"/>
    </LinearLayout>

</LinearLayout>